# Contextual-Chatbot

./: .gitignore  Dockerfile  README.md  config.json  config.py  docker-compose.yml  index.html  pyproject.toml  question_answer.csv.dvc  requirement.txt  score.csv.dvc  startup.sh  stream_test.py  testset.csv.dvc
data/: experiment_log.csv  question_answer.csv  score.csv  score.csv.dvc  testset.csv
evaluation/: eval.py  synthetic_data_generate.py
src/: app.py  db_test.py  models.py  utils.py  vectordb.py
tests/: query1.py
