[project]
name = "qp-ai-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymilvus>=2.4.7",
    "sentence-transformers>=3.1.1",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.10",
    "pypdf2>=3.0.1",
    "datasets>=3.0.1",
    "ragas>=0.1.20",
]
