[project]
name = "qp-ai-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gunicorn>=23.0.0",
    "uvicorn>=0.31.0",
    "fastapi>=0.115.0",
    "pymilvus>=2.4.7",
    "sentence-transformers>=3.1.1",
    "langchain>=0.3.1",
    "langchain-ollama>=0.2.0",
    "python-docx>=1.1.2",
    "pypdf2>=3.0.1",
    "langchain-openai>=0.2.1",
    "python-multipart>=0.0.11",
]
